<resources>
    <string name="app_name">CourseVass</string>
    <string name="text_button">Create Account</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="todo">TODO</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="user">Couse Vass</string>
    <string name="learning">We are learning</string>
    <string name="error">Error</string>
    <string name="accept">To accept</string>
    <string name="required_email">The email is mandatory</string>
    <string name="required_password">Password is required</string>
    <string name="loading">Loading...</string>
    <string name="name">Name:</string>
    <string name="description">Description:</string>
    <string name="status">Status:</string>
    <string name="assignedTo">AssignedTo:</string>
    <string name="dueDate">DueDate:</string>
    <string name="logout">Logout</string>
    <string name="create">Create</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>